--- a/settings/appsxsalud2016.conf
+++ b/settings/appsxsalud2016.conf
@@ -5,7 +5,7 @@ upstream django {
 server {
     listen      80;
 
-    server_name appsxsalud2016.smirnoff;
+    server_name appsxsalud2016.recurse.space;
     charset     utf-8;
 
     client_max_body_size 150M;
